--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ body {
   font-size: 0.8rem;
   padding: 0;
   margin: 0;
+  position: fixed;
+  z-index: 99;
   display: block;
   height: 32px;
   width: calc(100% - 0px);
@@ -326,6 +328,10 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
+}
+
+#react-root #titlebar-placeholder {
+  height: 32px;
 }
 
 #react-root #statusbar {
