--- a/css/style.scss
+++ b/css/style.scss
@@ -279,25 +279,13 @@ $APPICON_SIZE: 30px;
 }
 
 // content sections
-#main {
+#video-main {
   display: block;
+  outline: none;
   height: calc(100% - 32px);
   margin-top: 32px;
   padding: 20px;
   overflow-y: auto;
-
-  textarea {
-    width: 100%;
-  }
-  .textwrapper {
-    border: 1px solid #999999;
-    margin: 5px 0;
-    padding: 3px;
-  }
-  p {
-    margin-top: 10px;
-    color: gray;
-  }
 }
 
 #main2 {
