--- a/css/style.scss
+++ b/css/style.scss
@@ -11,14 +11,13 @@
   margin: 0;
   padding: 0;
 }
-
 body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
 
   font-family: "Segoe UI", sans-serif;
-  background: gray;
+  //background: gray;
   height: 100vh;
   overflow-y: hidden; // hide vertical scrollbar.
 }
@@ -54,7 +53,9 @@ $APPICON_SIZE: 30px;
     height: 100%;
     -webkit-app-region: drag;
     display: grid;
-    grid-template-columns: $APPICON_SIZE fit-content(300px) auto fit-content(200px);
+    grid-template-columns: $APPICON_SIZE fit-content(300px) auto fit-content(
+        200px
+      );
     grid-auto-rows: ($TITLEBAR_HEIGHT - 0);
   }
 }
