add maximize on mac

--- a/css/style.css
+++ b/css/style.css
@@ -330,4 +330,8 @@ body {
   bottom: 5px;
   /* This are approximated values, and the rest of your styling goes here */
 }
+
+#caption span::after {
+  content: attr(platform);
+}
 /*# sourceMappingURL=style.css.map */
